Assembler/tests/broken_asm/nojump3.stderr
error: a jump jumped beyond the program's boundaries
 --> tests/broken_asm/nojump3.asm:2:1
  |
2 | jmp -3
  | ^^^^^^ jumped from here
  |