Assembler/tests/broken_asm/nojump3.asm
stms s0, 8201 # 4
jmp -3
stms s0, 8210 # 6
